--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>vue-project</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">jjjjj</div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
