--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>vue-project</title>
   </head>
   <body>
-    <div id="app">jjjjj</div>
+    <div id="app"></div>
 
     <!-- built files will be auto injected -->
+    <script src="./src/main.js"></script>
   </body>
 </html>
